# get-etymology

./: LICENSE  README.md  get_etymology.py  input.md  pyproject.toml  scrappedetymologies.md
get_etymology/: get_etymology.py  inp.md  outp.md
