[tool.poetry]
name = "get-etymology"
version = "0.1.0"
description = "Scrap Wiktionary asynchronously to get etymology of all the words."
authors = ["Zeta Factorial"]
license = "MIT"
readme = "README.md"
packages = [{include = "get_etymology"}]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.3"
aiofiles = "^22.1.0"
beautifulsoup4 = "^4.11.1"
regex = "^2022.9.13"
click = "^8.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
