[tool.poetry]
name = "getetymology"
version = "0.1.0"
description = "Scrape Wiktionary asynchronously to get etymology"
authors = ["Zeta Factorial"]
license = "MIT"
readme = "README.md"
packages = [{include = "get_etymology"}]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.3"
aiofiles = "^22.1.0"
beautifulsoup4 = "^4.11.1"
regex = "^2022.9.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
